FreeST/test/Programs/InvalidTests/SessionTypes/typedefSkip/typedefSkip.fst
type T : *S = End

main : (T, T)
main = new @T ()
